[project]
name = "distworker"
version = "0.1.0"
description = ""
authors = [
    {name = "Nipun Talukdar",email = "nipun.talukdar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudpickle (>=3.1.1,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

